everything is finally working.

--- a/Systembolaget/Properties/Resources.resx
+++ b/Systembolaget/Properties/Resources.resx
@@ -118,10 +118,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="BigBkgrndTabletop" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BigBkgrndTabletop.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="combineInfo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\combineInfo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="combineInfo2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\combineInfo2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="productInfo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\productInfo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="productInfo2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\productInfo2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
